# envlt

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/envlt-cli/: Cargo.toml
crates/envlt-cli/src/: cli.rs  main.rs  output.rs
crates/envlt-cli/src/commands/: add.rs  auth.rs  check.rs  completions.rs  diff.rs  doctor.rs  export.rs  gen.rs  history.rs  import.rs  init.rs  list.rs  mod.rs  remove.rs  run.rs  set.rs  unset.rs  use_cmd.rs  vars.rs
crates/envlt-cli/tests/: cli_flow.rs
crates/envlt-core/: Cargo.toml
crates/envlt-core/src/: auth.rs  error.rs  lib.rs  link.rs
crates/envlt-core/src/app/: mod.rs  service.rs
crates/envlt-core/src/bundle/: format.rs  mod.rs
crates/envlt-core/src/env/: mod.rs  parser.rs  writer.rs
crates/envlt-core/src/vault/: crypto.rs  mod.rs  model.rs  store.rs
docs/: README.md  architecture.md  cli-reference.md  feature-ideas.md  getting-started.md  integrations.md  legacy-project-definition-summary.md  next-implementation-plan.md  phase-1-implementation-plan.md  project-definition.md  recommendations-2026.md  releasing.md  roadmap.md  security.md  spec-alignment.md  status.md  tech-debt.md  threat-model.md  troubleshooting.md  usage.md
