[package]
name = "envlt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
age.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
dirs.workspace = true
rand.workspace = true
scrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
